@@ -295,7 +295,7 @@ info : display information about the current file
 .B
 list
 .fi
-list : display the files list; list 'random_shuffle': randomly shuffle the file list; list 'reverse': reverse the file list; list 'clear': clear the file list; list 'sort': sort the file list; list 'pop' : pop the last file from the files list; list 'remove' [{filename(s)}] : remove the current file, or the {filename(s)}, if specified ; list {filename(s)} 'push': push {filename(s)} to the back of the files list; list 'filesnum': display the number of files in the files list; list 'mark' : mark the current file for stdout printing at exit; list 'unmark': unmark the current file, preventing from stdout printing at exit; list 'pushdir; {dirname}: will push all the files in {dirname}, when matching the regular expression in variable _pushdir_re or, if empty, from constant regular expression \.JPG$|\.PNG$|\.GIF$|\.BMP$|\.TIFF$|\.TIF$|\.JPEG$|\.JFIF$|\.PPM$|\.PGM$|\.PBM$|\.PCX$; list 'pushdirr' {dirname}: like pushdir, but will also push encountered directory entries recursively. 
+list : display the files list; list 'random_shuffle': randomly shuffle the file list; list 'reverse': reverse the file list; list 'clear': clear the file list; list 'sort': sort the file list; list 'pop' : pop the last file from the files list; list 'remove' [{filename(s)}] : remove the current file, or the {filename(s)}, if specified ; list {filename(s)} 'push': push {filename(s)} to the back of the files list; list 'filesnum': display the number of files in the files list; list 'mark' : mark the current file for stdout printing at exit; list 'unmark': unmark the current file, preventing from stdout printing at exit; list 'marked': show which files have been marked so far; list 'pushdir; {dirname}: will push all the files in {dirname}, when matching the regular expression in variable _pushdir_re or, if empty, from constant regular expression \.JPG$|\.PNG$|\.GIF$|\.BMP$|\.TIFF$|\.TIF$|\.JPEG$|\.JFIF$|\.PPM$|\.PGM$|\.PBM$|\.PCX$; list 'pushdirr' {dirname}: like pushdir, but will also push encountered directory entries recursively. 
 .fi
 
 .B
